# github-test-task

./: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml  setup.cfg
app/app/: celery.py  settings.py  urls.py
app/users/: admin.py  models.py  signals.py  tasks.py  test_views.py  urls.py  views.py
app/users/migrations/: 0001_initial.py  0002_alter_githubrepo_unique_together_and_more.py  0003_remove_usergithubrepo_private_githubrepo_private.py
app/users/templates/: base.html  github_repos.html  login.html
app/users/utils/: sync_repo.py
nginx/: Dockerfile  nginx.conf
