[tool.poetry]
name = "github-task"
version = "0.1.0"
description = ""
authors = ["alex <a556077@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.2.7"
python-dotenv = "^1.1.1"
psycopg2-binary = "^2.9.11"
django-allauth = {extras = ["socialaccount"], version = "^65.12.1"}
d = "^0.2.2"
django-extensions = "^4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
